add status on charge
