# docs/swagger/swagger.yaml
@@ -55,6 +55,8 @@ definitions:
         type: number
       longitude:
         type: number
+      on_charge:
+        type: boolean
       power:
         type: integer
     type: object
@@ -121,6 +123,8 @@ definitions:
         type: number
       longitude:
         type: number
+      on_charge:
+        type: boolean
     type: object
   model.TrackPrefRequest:
     properties:
@@ -144,7 +148,7 @@ definitions:
       latitude_last:
         type: number
       longitude_last:
-        type: number
+        type: boolean
       signal_source:
         type: integer
       signal_timestamp_last:
